# a2ui-rs

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  a2ui_demo.html
.superpowers/sdd/: task-1-report.md
clients/web-react/: .gitignore  README.md  demo.html  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
clients/web-react/src/: App.test.tsx  App.tsx  main.tsx
clients/web-react/src/components/ui/: button.tsx  card.tsx  separator.tsx  textarea.tsx
clients/web-react/src/contracts/: index.ts  kit.ts  protocol.ts  store.ts
clients/web-react/src/core/: README.md  conformance.test.ts  data-model.test.ts  data-model.ts  dependency-graph.ts  engine.ts  format-string.ts  functions.ts  index.ts  json-pointer.ts  messages.test.ts  messages.ts  path-resolver.ts  resolution.test.ts  resolve.ts  store-conformance.test.ts  store.test.ts  store.ts  surface.test.ts  surface.ts  types.ts
clients/web-react/src/demo/: DemoApp.test.tsx  DemoApp.tsx  main.tsx  surface.ts
clients/web-react/src/kits/html/: index.tsx
clients/web-react/src/kits/shadcn/: AudioPlayer.tsx  Button.tsx  Card.tsx  CheckBox.tsx  ChoicePicker.tsx  Column.tsx  DateTimeInput.tsx  Divider.tsx  Icon.tsx  Image.tsx  List.tsx  Modal.tsx  Placeholder.tsx  README.md  Row.tsx  Slider.tsx  Tabs.tsx  Text.tsx  TextField.tsx  Video.tsx  index.ts  m2-containers.test.tsx  m2-display.test.tsx  m2-inputs.test.tsx  shadcn-kit.test.tsx
clients/web-react/src/lib/: utils.ts
clients/web-react/src/react/: A2UI.test.tsx  README.md  Surface.tsx  context.tsx  index.ts  m2-integration.test.tsx  m3-kit-swap.test.tsx  renderNode.tsx
clients/web-react/src/test/: setup.ts
clients/web-react/src/transport/: sseClient.test.ts  sseClient.ts  wsClient.ts
crates/a2ui-cli/: Cargo.toml
crates/a2ui-cli/src/: lib.rs  main.rs
crates/a2ui-cli/tests/: cli_protocol_channel.rs  render_chain.rs
crates/a2ui-core/: Cargo.toml
crates/a2ui-core/assets/catalogs/basic/: catalog.json
crates/a2ui-core/src/: error.rs  lib.rs  prelude.rs
crates/a2ui-core/src/component/: catalog.rs  child_list.rs  component.rs  decl.rs  mod.rs
crates/a2ui-core/src/datamodel/: mod.rs  model.rs
crates/a2ui-core/src/message/: capabilities.rs  client_to_server.rs  envelope.rs  mod.rs  server_to_client.rs
crates/a2ui-core/src/schema/: catalog_schema.rs  mod.rs
crates/a2ui-core/src/state/: mod.rs  surface_state.rs
crates/a2ui-core/tests/integration/: a2ui_core_tests.rs
crates/a2ui-renderer/: Cargo.toml
crates/a2ui-renderer-egui/: Cargo.toml
crates/a2ui-renderer-egui/examples/: contact_card.rs  login.rs  restaurant.rs  simple_gui.rs
crates/a2ui-renderer-egui/src/: app.rs  gui_renderer.rs  lib.rs  widget_mapper.rs
crates/a2ui-renderer-egui/tests/: e2e_tests.rs
crates/a2ui-renderer-gui/: Cargo.toml
crates/a2ui-renderer-gui/examples/: login.rs  simple_gui.rs
crates/a2ui-renderer-gui/src/: app.rs  gui_renderer.rs  lib.rs  widget_mapper.rs
crates/a2ui-renderer-gui/tests/: e2e_tests.rs
crates/a2ui-renderer-iced/: Cargo.toml
crates/a2ui-renderer-iced/examples/: login_iced.rs  restaurant_iced.rs  simple_iced.rs
crates/a2ui-renderer-iced/src/: app.rs  fonts.rs  iced_renderer.rs  lib.rs  widget_mapper.rs
crates/a2ui-renderer-iced/tests/: e2e_tests.rs
crates/a2ui-renderer-tui/: Cargo.toml
crates/a2ui-renderer-tui/examples/: simple_tui.rs
crates/a2ui-renderer-tui/src/: focus_manager.rs  input_handler.rs  lib.rs  tui_renderer.rs  widget_builder.rs  widget_mapper.rs
crates/a2ui-renderer-tui/tests/: e2e_tests.rs
crates/a2ui-renderer-web/: Cargo.toml
crates/a2ui-renderer-web/examples/: simple_web.rs
crates/a2ui-renderer-web/src/: html_builder.rs  lib.rs  web_renderer.rs
crates/a2ui-renderer-web/tests/: e2e_tests.rs
crates/a2ui-renderer/src/: catalog_registry.rs  choice.rs  component_forest.rs  custom_component.rs  data_binding.rs  dependency_graph.rs  dynamic_value.rs  error.rs  format_string.rs  function_dispatcher.rs  input_state.rs  input_writeback.rs  lib.rs  path_resolver.rs  renderer.rs  renderer_core.rs  style.rs  surface_lru.rs
crates/a2ui-renderer/tests/: conformance.rs
crates/a2ui-transport/: Cargo.toml
crates/a2ui-transport/examples/: serve_demo.rs
crates/a2ui-transport/src/: error.rs  jsonl.rs  lib.rs  transport.rs  websocket.rs  ws_server.rs
docs/: b2-interactive-web-renderer-plan.md  refactor-step0-event-wire-format.md  refactor-step1-renderer-core.md  refactor-step2-serde-isolation.md  refactor-step3-renderer-behavior-alignment.md
docs/superpowers/plans/: 2026-06-26-a2ui-rs-implementation.md
scripts/: check-serde-isolation.sh
tests/conformance/: 01_create_surface_basic.json  02_update_data_model_upsert.json  03_update_data_model_delete.json  04_dynamic_value_path.json  05_format_string.json  06_childlist_template_index.json  07_progressive_placeholder.json  README.md
