[workspace]
resolver = "2"
members = ["crates/a2ui-core", "crates/a2ui-renderer", "crates/a2ui-renderer-tui"]
exclude = [
    "crates/a2ui-transport",
    "crates/a2ui-renderer-gui", "crates/a2ui-renderer-web", "crates/a2ui-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["yufeng108"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
