[package]
name = "a2ui-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true

[features]
embed-assets = []

[[test]]
name = "integration"
path = "tests/integration/a2ui_core_tests.rs"
