[package]
name = "a2ui-renderer-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "A2UI GUI Renderer implementation using egui"
repository = "https://github.com/yufeng108/a2ui-rs"

[[test]]
name = "e2e"
path = "tests/e2e_tests.rs"

[dependencies]
a2ui-core = { path = "../a2ui-core" }
a2ui-renderer = { path = "../a2ui-renderer" }
egui = "0.27"
eframe = "0.27"
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio.workspace = true
tracing.workspace = true
