[package]
name = "a2ui-renderer-iced"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "A2UI GUI Renderer implementation using Iced (Elm Architecture)"

[[test]]
name = "e2e"
path = "tests/e2e_tests.rs"

[dependencies]
a2ui-core = { path = "../a2ui-core" }
a2ui-renderer = { path = "../a2ui-renderer" }
iced = { version = "0.13", features = ["tokio", "image"] }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio.workspace = true
pollster = "0.3"
tracing.workspace = true
ureq = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[dev-dependencies]
tracing-subscriber = "0.3"
